--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
   "nickNameBot": "LIGHT YAGAMI 📩💥",
-  "prefix": "/",
+  "prefix": ",",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
